# claude-3.7-CoT-Faithfullness-Replication

./: .env.example  .gitignore  README.md  choice_scorer_def.py  harder_clue.py  inspect_2.py  llm_faithfulness.py  main.ipynb  main.py  pyproject.toml  qwq_gpqa_baseline.py  requirements.txt  run.bat  sonnet_image_hints.ipynb
.devcontainer/: Dockerfile  devcontainer.json
src/: answer_utils.py  baseline.py  batch_graph.py  behaviors.py  clue_baselining.py  clue_difficulty.py  config.py  evaluation.py  faithfulness_scores.json  filtering.py  fr_base_eval.py  fr_behaviors.py  fr_faithfulness.py  fr_tests.py  free_response_behaviors.py  free_response_behaviors_dump_extra.py  free_response_clue_difficulty.py  free_response_llm_faithfulness.py  gpqa.py  graph.py  graph_for_anthropic_replication.py  graph_question_difficulties.py  graph_utils.py  launch_runs.py  llm_faithfulness.py  main.py  main_difficulty.py  main_faithfulness.py  mmlu.py  monitor_control_eval.py  parsing.py  problem_difficulty.py  problem_difficulty_scores.csv  prompt_utils.py  question_difficulty.py  robustness_main.py  scoring.py  scratch.py  test_main.py  tests.py  (+2 more)
src/problem_difficulty/: QwQ-32B_NuminaMath-1.5_difficulty.csv  QwQ-32B_gpqa_diamond_difficulty.csv  QwQ-32B_hard-math-v0_difficulty.csv  Qwen3-235B-A22B-fp8-tput_hard-math-v0_difficulty-first.csv  Qwen3-235B-A22B-fp8-tput_hard-math-v0_difficulty-second.csv  Qwen3-235B-A22B-fp8-tput_hard-math-v0_difficulty-third.csv  Qwen3-235B-A22B-fp8-tput_hard-math-v0_difficulty.csv  c3.7s_NuminaMath-1.5_difficulty.csv  gpqa_c3.7s_difficulty_scores.csv  (+5 more)
(+48 files in other folders)
